tests/cases/should_fail/types/missing_ref_type.hash
// run=fail, stage=parse

k: & = & [1,2,3,4,5,6];
