tests/cases/should_fail/types/missing_ref_type.stderr
error: expected a type annotation, however received a `=`
 --> $DIR/missing_ref_type.hash:1:6
1 |   k: & = & [1,2,3,4,5,6];
  |        ^ here
